--- a/app/src/main/res/layout/fragment_swiping_page.xml
+++ b/app/src/main/res/layout/fragment_swiping_page.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:padding="8dp">
+        android:padding="15dp">
 
         <TextView
             android:text="FistName"
@@ -30,6 +30,49 @@
             android:textSize="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+    </LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="280dp"
+        android:src="@drawable/picture"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="8dp">
+        <TextView
+            android:text="Toronto"
+            android:id="@+id/m_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:paddingRight="20dp"/>
+        <TextView
+            android:text="28"
+            android:id="@+id/m_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="97dp"
+        android:gravity="center"
+        android:padding="20dp">
+
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="66dp"
+            android:text="talk" />
+
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="66dp"
+            android:layout_marginLeft="30dp"
+            android:text="buzz" />
     </LinearLayout>
 
     <TextView
